--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A small Project that generates Anime Subtitles Given a video file.",
   "main": "index.js",
   "scripts": {
+    "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
