Added status API with errors (needs debugging)

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,5 +8,5 @@
     "declaration": true,
     "downlevelIteration": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "src/index.d.ts"]
 }
