--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,11 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
     "@types/request": "^2.48.8",
+    "axios": "^1.1.2",
     "body-parser": "^1.20.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "ffmpeg-extract-audio": "^1.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
     "popups": "^1.1.3"
