--- a/server/package.json
+++ b/server/package.json
@@ -18,18 +18,20 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
     "@types/request": "^2.48.8",
-    "axios": "^1.1.2",
+    "axios": "^0.24.0",
     "body-parser": "^1.20.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "ffmpeg-extract-audio": "^1.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
+    "multer": "^1.4.5-lts.1",
     "popups": "^1.1.3"
   },
   "devDependencies": {
     "@types/eslint": "^8.4.6",
     "@types/express": "^4.17.14",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.8.3",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
